# plasma-nm

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  Messages.sh  README  README.md  config.h.cmake  org.kde.vpnimport.desktop  plasma-nm-config.h.in
active/setting/: CMakeLists.txt  connectionsettings.cpp  connectionsettings.h  connectionsettingshandler.cpp  connectionsettingshandler.h  metadata.desktop  networkmodel.cpp  networkmodel.h  networkmodelitem.cpp  networkmodelitem.h  networksettingmodelitem.cpp  networksettingmodelitem.h  networksettings.cpp  networksettings.h  networksettingsmodel.cpp  networksettingsmodel.h  networksettingsplugin.cpp  networksettingsplugin.h
applet/: CMakeLists.txt  ConnectionItem.qml  ConnectionListPage.qml  DetailsText.qml  Messages.sh  PopupDialog.qml  ShareNetworkQrCodePage.qml  Toolbar.qml  main.qml  main.xml  metadata.desktop  metadata.json
applet/declarative/: metadata.desktop  metadata.desktop.cmake
applet/icons/: CMakeLists.txt  plasma-networkmanagement.svgz  plasma-nm.svgz
captiveportalview/: CMakeLists.txt  Messages.sh  main.cpp  main.qml  org.kde.captiveportalview.desktop  qml.qrc
declarative-plugins/: CMakeLists.txt  appletinfo.cpp  appletinfo.h  connectionicon.cpp  connectionicon.h  debug.cpp  debug.h  enabledconnections.cpp  enums.cpp  enums.h  globalconfig.cpp  globalconfig.h  handler.cpp  handler.h  model.cpp  modelitem.cpp  modelitem.h  monitor.cpp  monitor.h  networkstatus.cpp  passworddialog.cpp  passworddialog.h  qmldir  qmlplugins.cpp  qmlplugins.h  secretagent.cpp  secretagent.h  sortmodel.cpp  sortmodel.h  trafficmonitor.cpp  vpnuiplugin.cpp  vpnuiplugin.h
declarative-plugins/applet/: availabledevices.cpp  availabledevices.h  connectionicon.cpp  connectionicon.h  enabledconnections.cpp  enabledconnections.h  globalconfig.cpp  globalconfig.h  globalstatus.cpp  (+5 more)
editor/: CMakeLists.txt  Messages.sh  bondwidget.cpp  bondwidget.h  bridgewidget.cpp  bridgewidget.h  btwidget.cpp  btwidget.h  cdmawidget.cpp  cdmawidget.h  connectiondetaileditor.cpp  connectiondetaileditor.h  connectioneditor.cpp  connectioneditor.h  connectionitem.cpp  connectionitem.h  connectiontypeitem.cpp  connectiontypeitem.h  connectionwidget.cpp  connectionwidget.h  gsmwidget.cpp  gsmwidget.h  infinibandwidget.cpp  infinibandwidget.h  ipv4widget.cpp  ipv4widget.h  ipv6widget.cpp  ipv6widget.h  kde-nm-connection-editor.desktop  kde-nm-connection-editorui.rc  kde5-nm-connection-editor.desktop  kde5-nm-connection-editorui.rc  main.cpp  pppoewidget.cpp  pppoewidget.h  pppwidget.cpp  pppwidget.h  security802-1x.cpp  security802-1x.h  settingwidget.cpp  (+12 more)
importer/: CMakeLists.txt  Messages.sh  main.cpp  org.kde.plasma.networkmanagement.importer.desktop
kcm/: AvailableConnectionsDelegate.cpp  AvailableConnectionsDelegate.h  AvailableConnectionsModel.cpp  AvailableConnectionsModel.h  AvailableConnectionsSortModel.cpp  AvailableConnectionsSortModel.h  CMakeLists.txt  Description.cpp  Description.h  Description.ui  DeviceConnectionDelegate.cpp  DeviceConnectionDelegate.h  DeviceConnectionModel.cpp  DeviceConnectionModel.h  DeviceConnectionSortFilterModel.cpp  DeviceConnectionSortFilterModel.h  DeviceModel.cpp  DeviceModel.h  Messages.sh  NetworkKCM.cpp  NetworkKCM.h  NetworkKCM.ui  TabConnectionInfo.cpp  TabConnectionInfo.h  TabConnectionInfo.ui  TabDeviceAdvanced.cpp  TabDeviceAdvanced.h  TabDeviceAdvanced.ui  TabDeviceInfo.cpp  TabDeviceInfo.h  TabDeviceInfo.ui  kcm.cpp  kcm.h  kcm.ui  kcm_network.desktop  kcm_networkmanagement.desktop  kcm_networkmanagement.json
kded/: CMakeLists.txt  Messages.sh  bluetoothdbustype.cpp  bluetoothdbustype.h  bluetoothmonitor.cpp  bluetoothmonitor.h  connectivitymonitor.cpp  connectivitymonitor.h  interfacenotification.cpp  interfacenotification.h  modemmonitor.cpp  modemmonitor.h  monitor.cpp  monitor.h  networkmanagement.desktop  networkmanagement.json  networkmanagement.notifyrc  notification.cpp  notification.h  passworddialog.cpp  passworddialog.h  passworddialog.ui  pindialog.cpp  pindialog.h  pinwidget.ui  plasma-nm.notifyrc  plasmanm.desktop  portalmonitor.cpp  portalmonitor.h  secretagent.cpp  secretagent.h  service.cpp  service.h
lib/: .CMakeLists.txt.kate-swp  CMakeLists.txt  bssidcombobox.cpp  bssidcombobox.h  detailkeyseditor.cpp  detailkeyseditor.h  detailkeyseditordesignfactory.h  detailkeyswidget.ui  hwaddrcombobox.cpp  hwaddrcombobox.h  mobileconnectionwizard.cpp  mobileconnectionwizard.h  mobileproviders.cpp  mobileproviders.h  passworddialog.cpp  passworddialog.h  plasma-networkmanagement-vpnuiplugin.desktop  plasma-nm-vpnuiplugin.desktop  plasmanm_export.h  secretagent.cpp  secretagent.h  settingwidget.cpp  settingwidget.h  ssidcombobox.cpp  ssidcombobox.h  uiutils.cpp  uiutils.h  vpnuiplugin.cpp  vpnuiplugin.h
libeditor/: CMakeLists.txt  Messages.sh  bridgewidget.h  btwidget.cpp  btwidget.h  cdmawidget.cpp  cdmawidget.h  gsmwidget.cpp  gsmwidget.h  infinibandwidget.cpp  infinibandwidget.h  ipv4widget.cpp  ipv4widget.h  ipv6widget.h  pppoewidget.cpp  pppoewidget.h  pppwidget.cpp  pppwidget.h  security802-1x.cpp  security802-1x.h  vlanwidget.cpp  vlanwidget.h  wificonnectionwidget.cpp  wificonnectionwidget.h  wifisecurity.h  wimaxwidget.cpp  wimaxwidget.h  wiredconnectionwidget.cpp  wiredconnectionwidget.h  wiredsecurity.h
libs/: CMakeLists.txt  Messages.sh  availabledevices.cpp  availabledevices.h  configuration.cpp  configuration.h  configurationproxy.cpp  configurationproxy.h  connectionicon.cpp  connectionicon.h  debug.cpp  debug.h  enabledconnections.h  enums.h  globalconfig.cpp  globalconfig.h  handler.cpp  handler.h  mecardhandler.cpp  mecardhandler.h  mobileutils.cpp  mobileutils.h  networkstatus.cpp  networkstatus.h  plasmanm_export.h  qrcahandler.cpp  qrcahandler.h  uiutils.cpp  uiutils.h  wirelessstatus.h
mobile_cellular/: CMakeLists.txt  celluralsettings.cpp  celluralsettings.h  mobile_cellural.desktop
tests/: CMakeLists.txt  mobileproviderstest.cpp  simpleiplisttest.cpp  simpleipv4test.cpp  simpleipv6test.cpp
vpn/: CMakeLists.txt
(+1933 files in other folders)
